# teaching-system

./: .env.example  .gitignore  README.md  dev.sh  pyproject.toml
.agent/workflows/: .gitkeep
configs/: models.yaml
data/config/: app_config_v1.yaml  personas_v1.yaml
db/: teaching.db
docs/: Plan_implementacion.md  Walkthrough.md  claude_code_handoff.md  cli_spec_v1.md  contracts_v1.md  e2e_test_checklist_v1.md  f2_spec.md  implementation_risks.md  implementation_roadmap.md  langgraph_design_v1.md  phase_guardrails.md  webapi_quickstart.md
prompts/: exam_generator_prompt.md  exercise_generator_prompt.md  grader_prompt_exam.md  grader_prompt_practice.md  notes_prompt.md  outline_extractor_prompt.md  post_failure_choice.md  remediation_brief.md  teacher_prompt.md
prompts/exercises/: generate.md  generate_text.md  generate_user.md
prompts/grader/: exam.md  exam_text.md  exam_user.md  grade.md  grade_text.md  grade_user.md
prompts/llm/: json_repair.md
prompts/notes/: notes.md  notes_user.md  summary.md  summary_text.md  summary_user.md
prompts/tutor/: check_comprehension.md  deepen.md  explain_point.md  more_examples.md  plan_from_unit_text.md  qa.md  reexplain.md  unit_opening.md
src/teaching/: __init__.py
tests/: __init__.py  conftest.py  test_safety.py
tests/f2/: __init__.py  test_extractors.py  test_importer.py  test_normalizer.py  test_outline.py
tests/f3/: __init__.py  test_unit_planner.py  test_units.py
tests/f4/: __init__.py  conftest.py  test_llm_client.py  test_notes_generator.py
tests/f5/: __init__.py  conftest.py  test_attempt_repository.py  (+6 more)
web/: .gitignore  README_frontend.md  next.config.js  package-lock.json  package.json
(+4894 files in other folders)
